# AMR-Logistic-System

./: .flake8  Dockerfile  README.md  amr-base.dockerfile  amr-global-planner.dockerfile  docker-compose.yaml
.github/workflows/: ci.yml
ImplementationDesigns/: VersionControlNorms.txt
ImplementationDesigns/Version0.1.0/: FINAL LAUNCH & MANAGEMENT ARCHITECTURE.md  HighLevelPKGDesign.md  MotionPlanning(LocalPlanner + Controller)CaseStudy.md  currentImplementationDesigns.md
ImplementationDesigns/Version0.1.0/Controller/: Controller.md
ImplementationDesigns/Version0.1.0/GlobalPthPlanner/: GlobalPathPlanner.md
ImplementationDesigns/Version0.1.0/LocalPlanner/: LocalPathPlanner.md  SimTest&RvizVisualizationOfLocalPlanner.md
ImplementationDesigns/Versionn.X.0.0/: DeliveryAMRHighlevelArchitectureDesigns.md
amr_central_management/: amr_central_management.md  package.xml  readme.md  setup.cfg  setup.py
amr_central_management/amr_central_management/: amr_central_management_params.py  amr_central_management_params.yaml  central_management.py  error_handling.py
amr_central_management/config/: central_management_params.yaml  default_params.yaml
amr_interfaces/: CMakeLists.txt  package.xml
amr_interfaces/action/: NavigateToGoal.action
amr_interfaces/msg/: LogMessage.msg  RobotPose.msg  Trajectory.msg  TrajectoryPoint.msg
amr_interfaces/srv/: AmrGoalManagement.srv  ComputeGlobalPath.srv
amr_launch_manager/: CMakeLists.txt  package.xml
amr_launch_manager/launch/: amr.launch.py
amr_local_planner_py/: package.xml  setup.cfg  setup.py
amr_local_planner_py/amr_local_planner_py/: centerline_processor.py  common_types.py  create_anmation.py  distance_map.py  dummy_localization_params.yaml  localPlannerNode.py  simulatedLocalization.py  spline_generation.py  test_windowed_planner.py  trajectory_blending.py  trajectory_generation.py  trajectory_optimizer.py  velocity_profile.py  window_manager.py
amr_localization/: package.xml  setup.py
amr_localization/amr_localization/: dummy_localization_node.py
amr_navigation_system/: CMakeLists.txt  README.md  amr_navigation_system.md  package.xml
amr_navigation_system/config/: client_params.yaml  default_params.yaml  global_path_planner_params.yaml
amr_navigation_system/include/amr_navigation_system/global_path_plan_server/: amr_traffic_rules.hpp  graph_builder.hpp  optimal_path_finder.hpp
amr_navigation_system/include/amr_navigation_system/utils/: common_utils.hpp  logger.hpp
amr_navigation_system/laneletMaps/: HS-SchmalkaldenPart1.osm
amr_navigation_system/src/global_path_plan_client/: global_path_planner_client.cpp
amr_navigation_system/src/global_path_plan_server/: amr_traffic_rules.cpp  global_path_planner.cpp  graph_builder.cpp  optimal_path_finder.cpp
amr_navigation_system/src/utils/: common_utils.cpp  logger.cpp  logger.md
amr_trajectory_planner/: amr_trajectory_planner.md  package.xml  setup.cfg  setup.py
amr_trajectory_planner/amr_trajectory_planner/: amr_traffic_rules.py  amr_trajectory_planner_node.py  amr_trajectory_planner_params.py  amr_trajectory_planner_params.yaml  lanelet_map_manager.py  load_amr_traffic_rules.py
amr_trajectory_planner/config/: default_params.yaml
amr_trajectory_planner/test/: test_pep257.py
amr_utils_python/: CMakeLists.txt  package.xml
amr_utils_python/include/amr_utils_python/: coordinate_transforms.hpp
amr_utils_python/src/: coordinate_transforms_py.cpp
