<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_central_management</name>
  <version>0.0.0</version>
  <description>amr_central_management: It manages the AMR goals, error handling</description>
  <maintainer email="abhishek.nannuri@outlook.com">Abhishek Nannuri</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>amr_interfaces</depend>
  <depend>amr_utils_python</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
