<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_interfaces</name>
  <version>0.0.0</version>
  <description>amr_interfaces pkg: Contains all the custom interfaces</description>
  <maintainer email="nannuriabhi2000@gmail.com">abhi</maintainer>
  <license>Apache License 2.0</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>

  <!-- Beginning of the code added as part of one-time setup -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- End of the code added as part of one-time setup -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
