<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_launch_manager</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nannuriabhi2000@gmail.com">abhi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>amr_local_planner</depend>
  <depend>amr_navigation_system</depend>
  <depend>amr_central_management</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
