<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_navigation_system</name>
  <version>0.0.0</version>
  <description>amr_navigation_system pkg: A global path planner pkg</description>
  <maintainer email="abhishek.nannuri@outlook.com">Abhishek Nannuri</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>spdlog</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_projection</depend>
  <depend>lanelet2_routing</depend>
  <depend>lanelet2_traffic_rules</depend>
  <depend>amr_interfaces</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>fmt</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!-- <test_depend>ament_cmake_clang_format</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
