<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_trajectory_planner</name>
  <version>0.0.0</version>
  <description>amr_trajectory_planner: AMR Trajectory Planner</description>
  <maintainer email="abhishek.nannuri@outlook.com">Abhishek Nannuri</maintainer>
  <license>Apache-2.0</license>

  <depend>generate_parameter_library_py</depend>
  <depend>rclpy</depend>
  <depend>lanelet2_python</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
