<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_utils_python</name>
  <version>0.0.0</version>
  <description>amr_utils_python: A common utility package</description>
  <maintainer email="abhishek.nannuri@outlook.com">Abhishek Nannuri</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>pybind11_vendor</depend>
  <depend>pybind11-dev</depend>
  <depend>geographiclib</depend>
  <depend>python3-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
